<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height"
        android:background="@color/colorSecondary"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/dialog_title_request"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_header_icon_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_detail" />

        <TableLayout
            android:id="@+id/group_detail_request"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/employee_label" />

                <TextView
                    android:id="@+id/employee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/process_label" />

                <TextView
                    android:id="@+id/process"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/activity_label" />

                <TextView
                    android:id="@+id/activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/request_date_label" />

                <TextView
                    android:id="@+id/request_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/begin_date_label" />

                <TextView
                    android:id="@+id/begin_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/end_date_label" />

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/last_vacation_date_label" />

                <TextView
                    android:id="@+id/last_vacation_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:text="@string/request_status_label" />

                <TextView
                    android:id="@+id/request_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/hr_normal_line"
        android:background="@color/colorSecondary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/dialog_request_reject"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:textColor="@color/colorAlertDanger"
            android:text="@string/action_reject"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/dialog_request_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:text="@string/action_approve"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>