<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height"
        android:background="@color/colorSecondary"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/dialog_title_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_header_icon_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_logout_text" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/hr_normal_line"
        android:background="@color/colorSecondary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/dialog_logout_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/action_cancel"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/dialog_logout_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:text="@string/action_confirm"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>