<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:weightSum="1">

    <Spinner
        android:id="@+id/state_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:spinnerMode="dropdown"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorSecondary"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/main_fragment_title"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/btn_refresh_requests_list" />

        <ImageView
            android:id="@+id/btn_refresh_requests_list"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_refresh"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/refresh_img" />

    </RelativeLayout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/empty_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardUseCompatPadding="false">

        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_records" />

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.bizagi.ccamargov.bizagivacations.utilities.RecyclerViewEmptySupport
            android:id="@+id/requests_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:showIn="@layout/fragment_main" >

        </com.bizagi.ccamargov.bizagivacations.utilities.RecyclerViewEmptySupport>


    </RelativeLayout>

</LinearLayout>